Adding pod swiftyCam, and create viewController to test compression, see log after compression

--- a/Example/CSVideoCompression/Info.plist
+++ b/Example/CSVideoCompression/Info.plist
@@ -34,5 +34,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Uso para teste</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>To Record Audio With Video</string>
 </dict>
 </plist>
